fix(style): remove 1px gap between banner and projects

--- a/components/SkillsBanner/SkillsBanner.module.scss
+++ b/components/SkillsBanner/SkillsBanner.module.scss
@@ -3,6 +3,7 @@
 
 .skills {
   padding: 2rem 0 12rem 0;
+  margin-top: -1px;
   @include mixins.breakpoint('>=sm') {
     padding-left: 1rem;
     padding-right: 1rem;
